--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "version": "1.0.0",
   "main": "sever.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "Giovanni",
   "license": "ISC",
